update: minor update and cleanups